API cleanup